k8s/applications/restore/pocket-tts/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restore-pocket-tts-default-allow
  namespace: restore-pocket-tts
  labels:
    app.kubernetes.io/name: pocket-tts
    app.kubernetes.io/component: restore-drill
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pocket-tts
  ingress:
    - fromEntities:
        - host
        - remote-node
        - cluster
        - ingress
      toPorts:
        - ports:
            - port: "49112"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
